# origin

./: .gitignore
CourseWork/: CourseWork.sln  CourseWork.vcxproj  main.cpp
CourseWork/CourseWorkDLL/: AirTransport.cpp  AirTransport.h  AllTerrainBoots.cpp  AllTerrainBoots.h  Broomstick.cpp  Broomstick.h  Camel.cpp  Camel.h  Centaur.cpp  Centaur.h  CourseWorkDLL.vcxproj  CourseWorkDLL.vcxproj.filters  Eagle.cpp  Eagle.h  Errors.cpp  Errors.h  HighSpeedCamel.cpp  HighSpeedCamel.h  LandTransport.cpp  LandTransport.h  MagicCarpet.cpp  MagicCarpet.h  Scene.cpp  Scene.h  Transport.cpp  Transport.h
Lesson 1/Task 1/: Task 1.sln  Task 1.vcxproj  main.cpp
Lesson 1/Task 2/: Task 2.sln  Task 2.vcxproj  main.cpp
Lesson 1/Task 3/: Task 3.sln  Task 3.vcxproj  main.cpp
Lesson 10/Task 1/: Task 1.sln  Task 1.vcxproj  main.cpp
Lesson 10/Task 2/: Task 2.sln  Task 2.vcxproj  main.cpp
Lesson 10/Task 3/: CMakeLists.txt  Leaver.cpp  Leaver.h
Lesson 10/Task 4/: Task 4.sln  Task 4.vcxproj  main.cpp
Lesson 10/Task 5/: CMakeLists.txt  EquilateralTriangle.h  Figure.h  IsoscelesTriangle.h  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rectangle.h  Rhomb.cpp  Rhomb.h  RightTriangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
Lesson 11/Task 1/: Task 1.sln  Task 1.vcxproj  extended_array.h  main.cpp
Lesson 11/Task 2/: Task 2.sln  Task 2.vcxproj  extended_array.h  main.cpp
Lesson 11/Tast 3/: Tast 3.sln  Tast 3.vcxproj  Tast 3.vcxproj.filters  extended_array.h  main.cpp
Lesson 9/Task 2/: CMakeLists.txt  EquilateralTriangle.cpp  EquilateralTriangle.h  Figure.cpp  Figure.h  IsoscelesTriangle.h  Quadrangle.cpp  Rhomb.cpp  Rhomb.h  Square.cpp  Triangle.h  main.cpp
(+104 files in other folders)
